# transcriptionapi

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  transcribe.py
.github/workflows/: release.yml  test.yml
tests/: test_transcribe.py
